--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,14 @@
 body{
 	margin:0px;
-	background:#fff;
+	background: #272727;
 	
+}
+
+.Base{
+	width: 1024px;
+	height: 800px;
+	display: block;
+	margin: 0 auto 0 auto;
 }
 a{
 	text-decoration: none;
@@ -10,6 +17,7 @@ a{
 header{
 	margin-top: -8px;
 	position: absolute;
+	left: 0;
 	width: 100%;
 	height: 80px;		
 	background: #000;
@@ -22,7 +30,7 @@ header{
 	font-family: 'Vesper Libre', serif;
 	text-align: center;
 	text-decoration: none;
-	    text-transform: capitalize;
+	text-transform: capitalize;
 }
  .barra-header ul{
 	margin:3px;
@@ -46,6 +54,25 @@ nav{
     
 
 }
+
+.lista2 {
+	width: 300px;
+	color: #fff;
+	position: relative;
+	top: 100px;
+	font-size: 18pt;
+}
+
+.lista2 li:nth-child(1){
+	color: #0d8dc0;
+	margin-left: 20px;
+	list-style: none;
+	font-size: 22pt;
+	display: block;
+	position: relative;
+	
+}
+
 .barra-header li{
 	display: inline;
 	margin-right: 50px;
