--- a/estilo.css
+++ b/estilo.css
@@ -1,89 +1,93 @@
-body{
-	margin:0px;
-	background: #272727;
-	
+body {
+  margin: 0px;
+  background: #272727;
 }
 
-.Base{
-	width: 1024px;
-	height: 800px;
-	display: block;
-	margin: 0 auto 0 auto;
+.Base {
+  width: 1024px;
+  height: 800px;
+  display: block;
+  margin: auto;
 }
-a{
-	text-decoration: none;
-	color: white;
-}
-header{
-	margin-top: -8px;
-	position: absolute;
-	left: 0;
-	width: 100%;
-	height: 80px;		
-	background: #000;
-	margin-left: 0px;
 
+a {
+  text-decoration: none;
+  color: white;
 }
-.a-header{
-	font-size: 19px;
-	color: #fff;
-	font-family: 'Vesper Libre', serif;
-	text-align: center;
-	text-decoration: none;
-	text-transform: capitalize;
-}
- .barra-header ul{
-	margin:3px;
-	margin-left:176px;
-	list-style: none;
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-	margin-top:-38px;
-}
-nav{
-	display:inline;
-	
-}
-.img-header{
 
-    margin-top: 15px;
-    width: 180px;
-    height: 55px;
-    
+header {
+  margin-top: -8px;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 80px;
+  background: #000;
+  margin-left: 0px;
+}
 
+.a-header {
+  font-size: 19px;
+  color: #fff;
+  font-family: "Vesper Libre", serif;
+  text-align: center;
+  text-decoration: none;
+  text-transform: capitalize;
+}
+
+.barra-header ul {
+  margin: 3px;
+  margin-left: 176px;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: -38px;
+}
+
+nav {
+  display: inline;
+}
+
+.img-header {
+  margin-top: 15px;
+  width: 180px;
+  height: 55px;
 }
 
 .lista2 {
-	width: 300px;
-	color: #fff;
-	position: relative;
-	top: 100px;
-	font-size: 18pt;
+  width: 300px;
+  color: #fff;
+  position: relative;
+  top: 100px;
+  font-size: 18pt;  
 }
 
-.lista2 li:nth-child(1){
-	color: #0d8dc0;
-	margin-left: 20px;
-	list-style: none;
-	font-size: 22pt;
-	display: block;
-	position: relative;
-	
+.lista2 li:nth-child(1) {
+  color: #0d8dc0;
+  margin-left: 20px;
+  list-style: none;
+  font-size: 22pt;
+  display: block;
+  position: relative;
 }
 
-.barra-header li{
-	display: inline;
-	margin-right: 50px;
-	line-height: 40px;
-	letter-spacing: 0px;
-}
-.barra-header{
-	height:62px;
+.barra-header li {
+  display: inline;
+  margin-right: 50px;
+  line-height: 40px;
+  letter-spacing: 0px;
 }
 
-h1
-{
-text-align: center
+.barra-header {
+  height: 62px;
+}
+
+h1{
+  text-align: center;
+}
+
+.fundo{
+  background: #ADD8E6;
+  font-family: 'Courier New', Courier, monospace;
 }
