--- a/estilo.css
+++ b/estilo.css
@@ -4,11 +4,26 @@ body {
 }
 
 .Base {
-  width: 1024px;
+  width: 100%;
   height: 800px;
   display: block;
   margin: auto;
 }
+.Base1 {
+  width: 100%;
+  height: 800px;
+  display: block;
+  margin: auto;
+  background-color: teal;
+}
+.Base2 {
+  width: 100%;
+  height: 800px;
+  display: block;
+  margin: auto;
+  background-color:rgb(192, 52, 52);
+}
+
 
 a {
   text-decoration: none;
@@ -90,4 +105,42 @@ h1{
 .fundo{
   background: #ADD8E6;
   font-family: 'Courier New', Courier, monospace;
+}
+.bloco{
+  float: left;
+  width: 22%;
+  margin: 10px;
+}
+h3{
+  color : #0d8dc0;
+
+}
+li{
+  color: white;
+}
+.t{
+   display: block;
+
+}
+h1{
+  color:white;
+}
+.bloco{
+  float: left;
+  width: 22%;
+  margin: 10px;
+}
+h3{
+  color :  #0d8dc0;
+
+}
+li{
+  color: white;
+}
+.t{
+   display: block;
+
+}
+h1{
+  color:white;
 }
